--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,20 @@
 [project]
 name = "mcp-luciana"
 version = "0.1.0"
-description = "Add your description here"
+description = "MCP Server for API Testing - Swagger Analysis, ISTQB v4 Test Case Generation, and Karate Feature Generation"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "fastmcp>=0.1.0",
+    "pydantic>=2.0.0",
+    "pydantic-settings>=2.0.0",
+    "httpx>=0.24.0",
+    "pyyaml>=6.0",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
